--- a/vue_trip/package.json
+++ b/vue_trip/package.json
@@ -11,12 +11,14 @@
     "node": "^16.20.0",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.36",
+    "vant": "^4.3.2",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "less": "^4.1.3",
+    "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.5"
   }
 }
