--- a/vue_trip/package.json
+++ b/vue_trip/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "node": "^16.20.0",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.36",
