--- a/vue_trip/package.json
+++ b/vue_trip/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "dayjs": "^1.11.7",
     "node": "^16.20.0",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.36",
