--- a/vue_trip/package.json
+++ b/vue_trip/package.json
@@ -13,6 +13,7 @@
     "node": "^16.20.0",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.36",
+    "underscore": "^1.13.6",
     "vant": "^4.3.2",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
